After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652225 - duplicate signal registration
duplicate signal registration
Status: RESOLVED FIXED
Product: libwnck
Classification: Core
Component: tasklist
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libwnck maintainers
libwnck maintainers
Depends on:
Blocks:
 
 
Reported: 2011-06-09 18:37 UTC by landijk-user
Modified: 2011-08-12 11:05 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description landijk-user 2011-06-09 18:37:03 UTC
Beginning at line 3734 of tasklist.c in the git master, there are two different if-blocks which check if the task type is WNCK_TASK_WINDOW (with different bracket indentation conventions), and both of the blocks register the same signal handler for drag_data_get.

There are no comments which explain the necessity of having two if-blocks or the necessity of registering the signal handler twice. It seems to be a bug, although I don't have a precise argument regarding its implications.
Comment 1 Vincent Untz 2011-08-12 11:05:31 UTC
Thanks, fixed.