tasklist: Do not add same signal handler twice for drag_data_get

The duplicate was added by mistake, while allowing to reorder task
buttons.

https://bugzilla.gnome.org/show_bug.cgi?id=652225